--- a/analysis/template/home.html
+++ b/analysis/template/home.html
@@ -21,7 +21,7 @@
             <div class="logo">EMO-TRACK</div>
             <ul class="nav-links">
                 <li><a href="/home">HOME</a></li>
-                <li><a href="/meetoption">MEETING</a></li>
+                <li><a href="/list">MEETING</a></li>
                 <li><a href="/meetlist">LIST</a></li>
                 <li><a href="#login.html" class="login-btn">Login</a></li>
             </ul>
