--- a/analysis/template/meeting.html
+++ b/analysis/template/meeting.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<h1>Jitsi Meeting Interface</h1>
+<h1>Jitsi Meeting </h1>
 <div id="jitsi-container"></div>
 
 <script src="https://meet.jit.si/external_api.js"></script>
